gitops/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: devops
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30007
